# pinetree

./: .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  NEWS.md  README.md  TODO  TODO.md  _counts.tsv  degrade_test.py  eventsignal.py  feature.py  polymer.py  run_simulation.py  setup.py  signal.py  simulation.py  test_bindings.py
.github/workflows/: build_for_macos_windows_linux.yaml  run_tests.yaml
R/: T7_plots.R  plot_counts.R  plot_times.R
docs/: Doxyfile  Makefile  conf.py  cpp_code.rst  cpp_ref.rst  design.rst  faq.rst  index.rst  intro.rst  multiple_runs.rst  output.rst  parameters.rst  python_code.rst  python_ref.rst  requirements.txt
examples/: README.txt  T7.yml  T7_032917.yml  T7_033017_knockout.yml  T7_033017_slowpol.yml  T7_033117.yml  T7_033117_knockout.yml  T7_033117_slowpol.yml  T7_041317_wt.yml  T7_041817_wt.yml  T7_042817_wt.yml  T7_042817b_wt.yml  T7_050217_wt.yml  T7_060517_wt.yml  T7_060517b_wt.yml  T7_062617_wt.yml  T7_072717_wt.yml  T7_072717b_rec.yml  T7_081017_rec.yml  T7_081017_wt.yml  T7_081017b_rec.yml  T7_class1.yml  T7_genome.gb  T7_new.yml  T7_spaced.yml  dual_polymerases.txt  dual_promoter.txt  dual_promoter.yml  fixed_transcript.py  fixed_transcripts_counts.tsv  params.txt  params.yml  phage_model.py  plots.R  three_genes.py  three_genes.txt  three_genes.yml  three_genes_counts.tsv  three_genes_rnase.py  three_genes_rnase.tsv  (+2 more)
old_python/: __init__.py  feature.py  parse_genbank.py
old_tests/: test_feature.py  test_run_simulation.py  test_simulation.py
old_tests/output/: readthrough_out.csv
old_tests/params/: consecutive_promoters.yml  consecutive_promoters_test.yml  lotka_voltera.yml  promoter_gene_overlap.yml  single_gene.yml  three_genes.yml
pinetree/: __init__.py  feature.cpp  feature.hpp  parser.py  polymer.cpp  polymer.hpp  python_bindings.cpp  simulation.cpp  simulation.hpp  tracker.cpp  tracker.hpp
pinetree/cmake.modules/: ParseAndAddCatchTests.cmake
pysinthe/: __init__.py  c_choices.cpp  choices.cpp  choices.hpp  choices.py  event_signal.hpp  eventsignal.py  feature.hpp  feature.py  parse_genbank.py  parser.py  polymer.cpp  polymer.hpp  polymer.py  python_bindings.cpp  simulation.cpp  simulation.hpp  simulation.py  tracker.cpp  tracker.hpp
pysinthe/cpp/: feature.cpp  feature.h
pysinthe/tests/: test_polymer.cpp  test_signals.cpp  test_simulation.cpp
src/: CMakeLists.txt  choices.cpp  choices.hpp  event_signal.hpp  feature.cpp  feature.hpp  polymer.cpp  polymer.hpp  python_bindings.cpp  simulation.cpp  simulation.hpp  simulation_pybind.cpp
src/cmake.modules/: ParseAndAddCatchTests.cmake
src/pinetree/: __init__.py  averager.py  choices.hpp  feature.cpp  feature.hpp  gillespie.cpp  gillespie.hpp  model.cpp  model.hpp  old_polymer.cpp  old_polymer.hpp  polymer.cpp  polymer.hpp  python_bindings.cpp  reaction.cpp  reaction.hpp  simulation.cpp  simulation.hpp  tracker.cpp  tracker.hpp
src/tests/: test_choices.cpp  test_feature.cpp  test_polymer.cpp  test_simulation.cpp
tests/: context.py  cpp_test.py  degrade_test.py  feature_test.py  integration_test.py  polymer_test.py  run_cpp_tests.py  test_all.cpp  test_choices.py  test_cpp.py  test_feature.cpp  test_feature.py  test_integration.py  test_main.cpp  test_polymer.cpp  test_polymer.py  test_reaction.py  test_run_simulation.py  test_signals.cpp  test_simulation.cpp  test_simulation.py  three_genes_rnase_prom_counts.tsv  unit_tests.cpp
tests/cpp/: test_feature.cpp  test_main.cpp
tests/lib/: catch.hpp
tests/models/: circular_genome.py  degrade_test.py  dual_polymerases.yml  dynamic_trnas.py  single_gene.py  three_genes_recoded.py
tests/output/: circular_genome_counts.tsv  consecutive_promoters_counts.tsv  consecutive_promoters_density.tsv  consecutive_promoters_out.csv  dual_polymerases_counts.tsv  dual_polymerases_density.tsv  dual_polymerases_out.csv  dual_promoter_counts.tsv  dual_promoter_density.tsv  dual_promoter_out.csv  dynamic_trnas_counts.tsv  genome_entry_counts.tsv  genome_entry_density.tsv  genome_entry_out.csv  lotka_voltera_counts.tsv  lotka_voltera_out.csv  overlapping_genes_counts.tsv  overlapping_genes_density.tsv  promoter_gene_overlap_counts.tsv  promoter_gene_overlap_density.tsv  promoter_gene_overlap_out.csv  readthrough_counts.tsv  readthrough_density.tsv  readthrough_out.csv  single_gene_counts.tsv  single_gene_counts_old.tsv  three_genes.out  three_genes_counts.tsv  (+12 more)
(+16 files in other folders)
